--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 * text=auto
-*.css linguist-vendored
-*.scss linguist-vendored
-*.js linguist-vendored
+*.js linguist-language=PHP 
+*.css linguist-language=PHP  
+*.html linguist-language=PHP 
 CHANGELOG.md export-ignore
